--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/node": "^20.1.1",
