--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@prisma/client": "4.14.1",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.9",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
@@ -25,6 +26,7 @@
     "react-feather": "^2.0.10",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
